--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="atras">atrás</string>
     <string name="aceptar">Aceptar</string>
     <string name="activar">Activar</string>
+    <string name="permiso_aceptado">Permiso aceptado</string>
+    <string name="permiso_denegado">Permiso denegado</string>
 
     <string name="introduce_nombre">Introduce tu nombre</string>
     <string name="nombre">nombre</string>
@@ -25,6 +27,8 @@
     <string name="dispisitivos_encontrados">DISPISITIVOS ENCONTRADOS</string>
     <string name="ya_buscando">Ya se esta realizando la búsqueda</string>
     <string name="partidas_encontradas">PARTIDAS ENCONTRADAS</string>
+    <string name="permisos_necesasios">Necesitas aceptar los permisos para poder usar la aplicación</string>
+
 
     <string name="go">GO</string>
     <string name="fin">Fin</string>
